--- a/public/views/admin/login.ejs
+++ b/public/views/admin/login.ejs
@@ -43,8 +43,8 @@
                                 <div class="clearfix"></div>
                                 <br />
                                 <div>
-                                    <h1><i class="fa fa-paw"></i> Gentelella Alela!</h1>
-                                    <p>©2016 All Rights Reserved. Gentelella Alela! is a Bootstrap 3 template. Privacy and Terms</p>
+                                    <h1><i class="fa fa-paw"></i> ELITE BUY SELL!</h1>
+                                    <p>©2016 All Rights Reserved. ELITE BUY SELL!!! is a E-commerce website for buying and selling. Privacy and Terms</p>
                                 </div>
                             </div>
                         </form>
@@ -80,8 +80,8 @@
                                 <div class="clearfix"></div>
                                 <br />
                                 <div>
-                                    <h1><i class="fa fa-paw"></i> Gentelella Alela!</h1>
-                                    <p>©2016 All Rights Reserved. Gentelella Alela! is a Bootstrap 3 template. Privacy and Terms</p>
+                                    <h1><i class="fa fa-paw"></i> ELITE BUY SELL</h1>
+                                    <p>©2016 All Rights Reserved. ELITE BUY SELL!!! is a E-commerce website for buying and selling. Privacy and Terms</p>
                                 </div>
                             </div>
                         </form>
