--- a/public/views/frontends/login.html
+++ b/public/views/frontends/login.html
@@ -25,8 +25,7 @@
         
         <div class="tab-content">
           <div id="signup">   
-            <h1>Sign Up for Free</h1>
-            
+          
             <form ng-submit="register()">
             
             <div class="top-row">
@@ -34,7 +33,7 @@
                 <label>
                   First Name<span class="req">*</span>
                 </label>
-                <input type="text" ng-model="reg_fname" required autocomplete="off"/>
+                <input class="field" type="text" ng-model="reg_fname"required autocomplete="off"/>
                 
               </div>
           
@@ -42,7 +41,7 @@
                 <label>
                   Last Name<span class="req">*</span>
                 </label>
-                <input type="text" ng-model="reg_lname"  required autocomplete="off"/>
+                <input class="field" type="text" ng-model="reg_lname"required autocomplete="off"/>
                 
               </div>
             </div>
@@ -51,7 +50,7 @@
               <label>
                 User Name<span class="req">*</span>
               </label>
-              <input type="username" ng-model="reg_Uname" required autocomplete="off"/>
+              <input class="field" type="username" ng-model="reg_Uname"required autocomplete="off"/>
              
             </div>
   
@@ -59,7 +58,7 @@
               <label>
                 Email Address<span class="req">*</span>
               </label>
-              <input type="email" ng-model="reg_email" required autocomplete="off"/>
+              <input class="field" type="email" ng-model="reg_email"required autocomplete="off"/>
               
             </div>
             
@@ -67,7 +66,7 @@
               <label>
                 Set A Password<span class="req">*</span>
               </label>
-              <input type="password" ng-model="reg_pass" required autocomplete="off"/>
+              <input class="field" type="password" ng-model="reg_pass"required autocomplete="off"/>
              
             </div>
             
@@ -78,7 +77,7 @@
           </div>
           
           <div id="login">   
-            <h1>Welcome Back!</h1>
+           
             <span style="color:red" ng-if="invalid_login == true" ng-bind="error"></span>
             <form ng-submit="login()" >
             
@@ -86,14 +85,14 @@
               <label>
                 Email Address<span class="req">*</span>
               </label>
-              <input type="email" ng-model="login_email" required autocomplete="off"/>
+              <input class="field" type="email" ng-model="login_email"required autocomplete="off"/>
             </div>
             
             <div class="field-wrap">
               <label>
                 Password<span class="req">*</span>
               </label>
-              <input type="password" ng-model="login_pass" required autocomplete="off"/>
+              <input class="field" type="password" ng-model="login_pass"required autocomplete="off"/>
             </div>
             
             <p class="forgot"><a href="#">Forgot Password?</a></p>
