--- a/public/views/index.html
+++ b/public/views/index.html
@@ -89,8 +89,9 @@
         <script type="text/javascript" src="assets/js/angular/libraries/angular-route.js"></script>
         <script type="text/javascript" src="assets/js/angular/libraries/ui-bootstrap-tpls.min.js"></script>
         <script type="text/javascript" src="assets/js/angular/libraries/ngStorage.js"></script>
+        <script type="text/javascript" src="assets/js/angular/libraries/ng-file-upload-all.min.js"></script>
         <script type="text/javascript" src="assets/js/angular/craiglist.js"></script>
-        <script type="text/javascript" src="assets/js/angular/libraries/services.js"></script>
+        <script type="text/javascript" src="assets/js/angular/services.js"></script>
         <script type="text/javascript" src="assets/js/angular/controllers/HeaderController.js"></script>
         <script type="text/javascript" src="assets/js/angular/controllers/HomeController.js"></script>
 
