Adding multiple image handling on server level

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -94,6 +94,7 @@
         <script type="text/javascript" src="assets/js/angular/services.js"></script>
         <script type="text/javascript" src="assets/js/angular/controllers/HeaderController.js"></script>
         <script type="text/javascript" src="assets/js/angular/controllers/HomeController.js"></script>
+        <script type="text/javascript" src="assets/js/angular/controllers/ProductController.js"></script>
 
         <!-- script for responsive tabs -->
         <script src="assets/js/easy-responsive-tabs.js"></script>
