--- a/public/assets/css/addproduct.css
+++ b/public/assets/css/addproduct.css
@@ -3708,19 +3708,19 @@ textarea.input100 {
 }
 
 .upload-drop-zone {
-  height: 200px;
+  height: 113px;
   border-width: 2px;
-  margin-bottom: 20px;
+  padding: 9px;
 }
 
 /* skin.css Style*/
-.upload-drop-zone {
+/*.upload-drop-zone {
   color: #ccc;
   border-style: dashed;
   border-color: #ccc;
   line-height: 200px;
   text-align: center
-}
+}*/
 .upload-drop-zone.drop {
   color: #222;
   border-color: #222;
