--- a/public/views/frontends/addproducts.html
+++ b/public/views/frontends/addproducts.html
@@ -3,7 +3,7 @@
 
     <div class="container-contact100">
 		<div class="wrap-contact100">
-			<form class="contact100-form validate-form" ng-submit="addProduct()">
+			<form class="contact100-form validate-form" ng-submit="addproduct()" name="addproductform">
 				<div class="wrap-input100 validate-input bg1" data-validate="Please Type Your Product Name">
 					<span class="label-input100">TITLE OF THE PRODUCT *</span>
 					<input class="input100" type="text" name="name" ng-model="title" placeholder="Enter the Name of the Product" required>
@@ -44,7 +44,7 @@
                             <button type="button" class="btn btn-default image-preview-clear" style="display:none;"> <span class="glyphicon glyphicon-remove"></span> Clear </button>
                             <!-- image-preview-input -->
                             <div class="btn btn-default image-preview-input"> <span class="glyphicon glyphicon-folder-open"></span> <span class="image-preview-input-title">Browse</span>
-                                <input type="file" accept="image/png, image/jpeg, image/gif" ngf-select ng-model="up.file" name="file" ngf-pattern="'image/*'" accept="image/*" ngf-max-size="20MB" multiple />
+                                <input type="file" accept="image/png, image/jpeg, image/gif" ngf-select ng-model="productimg" name="productimg" ngf-pattern="'image/*'" accept="image/*" ngf-max-size="20MB" multiple />
                                 <!-- rename it --> 
                             </div>
                             <button type="button" id="cancel" class="btn btn-labeled btn-primary"> <span class="btn-label"><i class="glyphicon glyphicon-remove-circle"></i> </span>Cancel</button>
@@ -59,9 +59,7 @@
                     </div>
                 </div>
 				<div class="container-contact100-form-btn">
-					<button class="contact100-form-btn">
-						<span>Submit <i class="fa fa-long-arrow-right m-l-7" aria-hidden="true"></i></span>
-					</button>
+                    <input type="submit" class="contact100-form-btn" value ='Submit'>
 				</div>
 			</form>
 		</div>
