--- a/public/views/frontends/auction.html
+++ b/public/views/frontends/auction.html
@@ -2,79 +2,44 @@
     <h3 class="wthree_text_info">My <span>Auction</span></h3>
 
     <div class="container-contact100">
-        
-            <div class="wrap-contact100">
-                    <h3 class="wthree_text_info" style="color:rgb(160, 118, 118)">Auction Item Registration Form</h3>
-                    <h2 class="wthree_text_info" style="color:black;font-size: 20px;padding-bottom: 10px;margin-left: 80px;margin-bottom: 20px;margin-top: -20px;">Please register your item giving full description of it to be auctioned</h2>
-                <form class="contact100-form validate-form" ng-submit="addProduct()">
-                    <div class="wrap-input100 validate-input bg1 rs1-wrap-input100" data-validate="Please Type Your First Name">
-                        <span class="label-input100">First Name *</span>
-                        <input class="input100" type="text" name="name" ng-model="fname" placeholder="" required>
-                    </div>
-                    <div class="wrap-input100 validate-input bg1 rs1-wrap-input100" data-validate="Please Type Your Last Name">
-                            <span class="label-input100">Last Name *</span>
-                            <input class="input100" type="text" name="name" ng-model="lname" placeholder="" required>
-                        </div>
-                    <div class="wrap-input100 validate-input bg1" data-validate="Please Type Your Product">
-                            <span class="label-input100">Email *</span>
-                            <input class="input100" type="text" name="name" ng-model="email" placeholder="" required>
-                        </div>
-                        <div class="wrap-input100 validate-input bg1" data-validate="Please Type Your Product">
-                                <span class="label-input100">Address *</span>
-                                <input class="input100" type="text" name="name" ng-model="address" placeholder="" required>
-                            </div>    
-                           <div class="wrap-input102">
-                            <hr>
-                            <h3 class="wthree_text_info" style="color:black;font-size: 20px;">DETAILED DESCRIPTION OF THE PRODUCT</h3>
-                            <hr>
-                            </div>
-                            <br>
-                    <div class="wrap-input100 validate-input bg1" data-validate = "Enter Your Product Name">
-                        <span class="label-input100">Name of the Product *</span>
-                        <input class="input100" type="number" name="product" ng-model="product" placeholder="" required>
-                    </div>
-                    
-    
-                    <div class="wrap-input100 validate-input bg0 rs1-alert-validate" data-validate = "Please Type Your Message">
-                        <span class="label-input100">Description</span>
-                        <textarea class="input100" name="description" ng-model="description" placeholder="Describe your product here..." required></textarea>
-                    </div>
-    
-                    <div class="panel panel-default">
-                        <div class="panel-heading"><strong>Upload files</strong> <small> </small></div>
-                        <div class="panel-body">
-                            <div class="input-group image-preview">
-                                <input placeholder="" type="text" class="form-control image-preview-filename" disabled="disabled">
-                                <!-- don't give a name === doesn't send on POST/GET --> 
-                                <span class="input-group-btn"> 
-                                <!-- image-preview-clear button -->
-                                <button type="button" class="btn btn-default image-preview-clear" style="display:none;"> <span class="glyphicon glyphicon-remove"></span> Clear </button>
-                                <!-- image-preview-input -->
-                                <div class="btn btn-default image-preview-input"> <span class="glyphicon glyphicon-folder-open"></span> <span class="image-preview-input-title">Browse</span>
-                                    <input type="file" accept="image/png, image/jpeg, image/gif" name="input-file-preview"/>
-                                    <!-- rename it --> 
-                                </div>
-                                <button type="button" id="cancel" class="btn btn-labeled btn-primary"> <span class="btn-label"><i class="glyphicon glyphicon-remove-circle"></i> </span>Cancel</button>
-                                </span>
-                            </div>
-                            <!-- /input-group image-preview [TO HERE]-->
-                            <br />
-                            <img id="myImg" class="upload-drop-zone" src="#" alt="Image File Upload here" />
-                            <!-- Drop Zone
-                            <div class="upload-drop-zone" id="drop-zone"> Or drag and drop files here </div>
-                            <br /> -->
-                        </div>
-                    </div>
-                    <div class="container-contact100-form-btn">
-                        <button class="contact100-form-btn">
-                            <span>AUCTION <i class="fa fa-long-arrow-right m-l-7" aria-hidden="true"></i></span>
-                        </button>
-                    </div>
-                </form>
-            </div>
+        <div class="wrap-contact100">
+            <h3 class="wthree_text_info" style="color:rgb(160, 118, 118)">Auction Item Registration Form</h3>
+            <h2 class="wthree_text_info" style="color:black;font-size: 20px;padding-bottom: 10px;margin-left: 80px;margin-bottom: 20px;margin-top: -20px;">Please register your item giving full description of it to be auctioned</h2>
+            <form class="contact100-form validate-form" ng-submit="addAuction()">
+                <div class="wrap-input100 validate-input bg1" data-validate="Please Type Your Product">
+                    <span class="label-input100">Title *</span>
+                    <input class="input100" type="text" name="name" ng-model="tile" placeholder="" required>
+                </div>
+                <div class="wrap-input100 validate-input bg1" data-validate="Please Type Your Product">
+                    <span class="label-input100">Address *</span>
+                    <input class="input100" type="text" name="name" ng-model="address" placeholder="" required>
+                </div>
+                <div class="wrap-input100 validate-input bg1 rs1-wrap-input100" data-validate="Please Type Your Start Date">
+                    <span class="label-input100">Start Date *</span>
+                    <input class="input100 date-picker" type="text" name="name" ng-model="start" placeholder="" required>
+                </div>
+                <div class="wrap-input100 validate-input bg1 rs1-wrap-input100" data-validate="Please Type Your Last Name">
+                    <span class="label-input100">End Date *</span>
+                    <input class="input100 date-picker" type="text" name="name" ng-model="end" placeholder="" required>
+                </div>
+                <div class="wrap-input102">
+                    <hr>
+                    <h3 class="wthree_text_info" style="color:black;font-size: 20px;">Products</h3>
+                    <hr>
+                </div>
+                <br>
+                <div class="wrap-input100 rs1-wrap-input100" ng-repeat="product in myproducts">
+                    <span>{{product.title}} for {{product.price}}</span>
+                    <input class="input100 date-picker" type="checkbox" name="name[]" ng-checked="productArray(product._id)">
+                </div>
+                <div class="container-contact100-form-btn">
+                    <button class="contact100-form-btn" type="submit">
+                        <span>AUCTION <i class="fa fa-long-arrow-right m-l-7" aria-hidden="true"></i></span>
+                    </button>
+                </div>
+            </form>
         </div>
-    
-    
+    </div>    
 </div>
 
 <style>
@@ -84,7 +49,13 @@
     /* border: 1px solid #e6e6e6; */
     border-radius: 13px;
     padding: 10px 30px 9px 22px;
-    margin-bottom: 20px;
-   
+    margin-bottom: 20px;  
 }
-</style>    
+</style>
+<script type="text/javascript">
+    $(document).ready(function(){
+        $(".date-picker").datetimepicker({
+            format: 'Y-MM-DD HH:mm'
+        });
+    });
+</script>
