--- a/public/views/index.html
+++ b/public/views/index.html
@@ -13,6 +13,7 @@
         <!--//tags -->
         <link href="assets/css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
         <link href="assets/css/style.css" rel="stylesheet" type="text/css" media="all" />
+        <link href="assets/admin/vendors/bootstrap-datetimepicker/src/sass/bootstrap-datetimepicker.scss" rel="stylesheet/sass">
         <link href="assets/css/font-awesome.css" rel="stylesheet">
         <link href="assets/css/easy-responsive-tabs.css" rel='stylesheet' type='text/css'/>
         <link href="assets/css/custom.css" rel='stylesheet' type='text/css'/>
@@ -85,6 +86,8 @@
                 
         <!-- js -->
         <script type="text/javascript" src="assets/js/jquery-2.1.4.min.js"></script>
+        <script src="/assets/admin/vendors/moment/moment.js"></script>
+        <script src="/assets/admin/vendors/bootstrap-datetimepicker/src/js/bootstrap-datetimepicker.js"></script>
         <script type="text/javascript" src="assets/js/angular/libraries/angular.min.js"></script>
         <script type="text/javascript" src="assets/js/angular/libraries/angular-route.js"></script>
         <script type="text/javascript" src="assets/js/angular/libraries/ui-bootstrap-tpls.min.js"></script>
