--- a/public/views/frontends/addproducts.html
+++ b/public/views/frontends/addproducts.html
@@ -44,8 +44,8 @@
                             <button type="button" class="btn btn-default image-preview-clear" style="display:none;"> <span class="glyphicon glyphicon-remove"></span> Clear </button>
                             <!-- image-preview-input -->
                             <div class="btn btn-default image-preview-input"> <span class="glyphicon glyphicon-folder-open"></span> <span class="image-preview-input-title">Browse</span>
-                                <input type="file" accept="image/png, image/jpeg, image/gif" ngf-select ng-model="productimg" name="productimg" ngf-pattern="'image/*'" accept="image/*" ngf-max-size="20MB" multiple />
-                                <!-- rename it --> 
+                                <input type="file" id="fileUploaded" accept="image/png, image/jpeg, image/gif" ngf-select name="productimg" ngf-pattern="'image/*'" accept="image/*" ngf-max-size="20MB" webkitdirectory multiple />
+                                <input type="hidden" ng-model="productimg" id="uploadedFilePath"/>
                             </div>
                             <button type="button" id="cancel" class="btn btn-labeled btn-primary"> <span class="btn-label"><i class="glyphicon glyphicon-remove-circle"></i> </span>Cancel</button>
                             </span>
@@ -53,9 +53,9 @@
                         <!-- /input-group image-preview [TO HERE]-->
                         <br />
                         <div class="img"></div>
-                        <!-- Drop Zone
+                        Drop Zone
                         <div class="upload-drop-zone" id="drop-zone"> Or drag and drop files here </div>
-                        <br /> -->
+                        <br />
                     </div>
                 </div>
 				<div class="container-contact100-form-btn">
@@ -92,5 +92,16 @@ function imageIsLoaded(file) {
     }
     reader.readAsDataURL(file);
 };
+
+$('#fileUploaded').on('change', function (evt) {
+    debugger;
+    var files = $(evt.currentTarget).get(0).files;
+
+    if(files.length > 0) {
+        $('#fileName').text(files[0].name);
+        $('#fileSize').text(files[0].size);
+        $('#filePath').text($('#fileSelected').val());
+    }
+});
 </script>
 
