--- a/public/views/frontends/auctionbutton.html
+++ b/public/views/frontends/auctionbutton.html
@@ -1,18 +1,21 @@
 <div class="banner_bottom_agile_info">
-    <h3 class="wthree_text_info">What We <span>Have</span></h3>
+    <h3 class="wthree_text_info">Auctioned <span>Items</span></h3>
+    <!-- <div class="container">
+        <div class=" row banner_bottom_agile_info_inner_w3ls">
+            {{product|json}}
+        </div>
+    </div> -->
     <div class="container">
         <div class=" row banner_bottom_agile_info_inner_w3ls">
-            <div class="col-md-4 wthree_banner_bottom_grid_three_left1 grid" ng-repeat="product in products">
-                <!-- {{product.images[0].path | json}} -->
-                <figure class="effect-roxy" style="width: 370px; height: 280px">
+            <div class="col-md-4 wthree_banner_bottom_grid_three_left1 grid" ng-repeat="product in myproducts">
+                <figure class="effect-roxy">
                     <img src="{{product.images[0].path}}" alt=" " class="img-responsive" />
                     <figcaption>
                         <h3><span>{{product.title.substr(0,1)}}</span>{{product.title.substr(1)}}</h3>
                         <h5><span>For {{product.price | currency: $ }}</span></h5>
-                        <p>By : {{product.owner.name}}
-                        <br>In : {{product.category.title}}
+                        <p>By : {{product.owner.name}}<br>In : {{product.category.title}}</p>
                         <br><a href="/product/{{product._id}}">View Product</p>
-                    </figcaption>                    
+                    </figcaption>
                 </figure>
             </div>
             <div class="clearfix"></div>
