--- a/public/views/index.html
+++ b/public/views/index.html
@@ -39,14 +39,22 @@
                                     </li>
                                 </ul>
                             </div>
+                            
                         </div>
+                       
                     </nav>
                 </div>
-                <div class="top_nav_right">
-                    <div class="wthreecartaits wthreecartaits2 cart cart box_1" ng-show="isloggedin==false">
+                <div class="top_nav_right1">
+                <div class="wthreecartaits wthreecartaits2 cart cart box_1"  style="width: 144px;">
+                        <a class="menu__link" href="/auctionbutton">Auction </a>
+                    </div>
+</div>
+                <div class="top_nav_right" style="width: 180px;margin-right: 10px;">
+                    
+                    <div class="wthreecartaits wthreecartaits2 cart cart box_1" ng-show="isloggedin==false" >
                         <a class="menu__link" href="/signup">Login/Register <span class="sr-only">(current)</span></a>
                     </div>
-                    <div class="wthreecartaits wthreecartaits2 cart cart box_1" ng-show="isloggedin==true">
+                    <div class="wthreecartaits wthreecartaits2 cart cart box_1" ng-show="isloggedin==true" >
                         <li class="menu__item dropdown">
                            <a class="menu__link" href="#" data-toggle="dropdown" aria-expanded="false">Profile <b class="caret"></b></a>
                             <ul class="dropdown-menu agile_short_dropdown">
@@ -58,7 +66,7 @@
                             </ul>
                         </li>
                     </div>
-                    </li>
+                    
                 </div>
                 <div class="clearfix"></div>
             </div>
