--- a/public/views/index.html
+++ b/public/views/index.html
@@ -99,6 +99,7 @@
         <script type="text/javascript" src="assets/js/angular/controllers/HomeController.js"></script>
         <script type="text/javascript" src="assets/js/angular/controllers/ProductController.js"></script>
         <script type="text/javascript" src="assets/js/angular/factories/img-to-base64.factory.js"></script>
+        <script type="text/javascript" src="assets/js/angular/libraries/angular-base64.js"></script>
 
         <!-- script for responsive tabs -->
         <script src="assets/js/easy-responsive-tabs.js"></script>
