--- a/public/views/frontends/auction.html
+++ b/public/views/frontends/auction.html
@@ -7,13 +7,17 @@
             <h2 class="wthree_text_info" style="color:black;font-size: 20px;padding-bottom: 10px;margin-left: 80px;margin-bottom: 20px;margin-top: -20px;">Please register your item giving full description of it to be auctioned</h2>
             <form class="contact100-form validate-form" ng-submit="addAuction()">
                 <div class="wrap-input100 validate-input bg1" data-validate="Please Type Your Product">
-                    <span class="label-input100">Title *</span>
-                    <input class="input100" type="text" name="name" ng-model="tile" placeholder="" required>
+                    <span class="label-input100">Name *</span>
+                    <input class="input100" type="text" name="name" ng-model="name" placeholder="" required>
                 </div>
-                <div class="wrap-input100 validate-input bg1" data-validate="Please Type Your Product">
-                    <span class="label-input100">Address *</span>
+                <div class="wrap-input100 validate-input bg1" data-validate="Please Type Your Address">
+                    <span class="label-input100">Location *</span>
                     <input class="input100" type="text" name="name" ng-model="address" placeholder="" required>
                 </div>
+                <div class="wrap-input100 validate-input bg1" data-validate="Please Type Your Email">
+                        <span class="label-input100">Email Id *</span>
+                        <input class="input100" type="text" name="name" ng-model="email" placeholder="" required>
+                    </div>
                 <div class="wrap-input100 validate-input bg1 rs1-wrap-input100" data-validate="Please Type Your Start Date">
                     <span class="label-input100">Start Date *</span>
                     <input class="input100 date-picker" type="text" name="name" ng-model="start" placeholder="" required>
@@ -24,14 +28,57 @@
                 </div>
                 <div class="wrap-input102">
                     <hr>
-                    <h3 class="wthree_text_info" style="color:black;font-size: 20px;">Products</h3>
+                    <h3 class="wthree_text_info" style="color:black;font-size: 20px;">Detailed Item Description</h3>
                     <hr>
                 </div>
+                <div class="wrap-input100 validate-input bg1" data-validate="Please Type Your Product">
+                        <span class="label-input100">Title *</span>
+                        <input class="input100" type="text" name="title" ng-model="title" placeholder="" required>
+                    </div>
+                    <div class="wrap-input100 validate-input bg0 rs1-alert-validate" data-validate = "Please Type Your Message">
+                            <span class="label-input100">Description</span>
+                            <textarea class="input100" name="message" placeholder="Your message here..."></textarea>
+                        </div> 
                 <br>
-                <div class="wrap-input100 rs1-wrap-input100" ng-repeat="product in myproducts">
+                <div class="panel panel-default">
+                        <div class="panel-heading"><strong>Upload files</strong> <small> </small></div>
+                        <div class="panel-body">
+                            <div class="input-group image-preview">
+                                <input placeholder="" type="text" class="form-control image-preview-filename" disabled="disabled">
+                                <!-- don't give a name === doesn't send on POST/GET --> 
+                                <span class="input-group-btn"> 
+                                <!-- image-preview-clear button -->
+                                <button type="button" class="btn btn-default image-preview-clear" style="display:none;"> <span class="glyphicon glyphicon-remove"></span> Clear </button>
+                                <!-- image-preview-input -->
+                                <div class="btn btn-default image-preview-input"> <span class="glyphicon glyphicon-folder-open"></span> <span class="image-preview-input-title">Browse</span>
+                                    <input type="file" accept="image/png, image/jpeg, image/gif" name="input-file-preview"/>
+                                    
+                                    
+                                    <!-- rename it --> 
+                                </div>
+                                 </div>
+                            <!-- /input-group image-preview [TO HERE]--> 
+                            
+                            <br />
+
+                            <img id="myImg" class="upload-drop-zone" src="#" alt="Image File Upload here" />
+                            <br/>
+
+                        
+                                
+                            
+                            <!-- Drop Zone
+                            <div class="upload-drop-zone" id="drop-zone"> Or drag and drop files here </div>
+                            <br /> -->
+                            
+                        </div>
+
+                    </div>
+
+                <!-- <div class="wrap-input100 rs1-wrap-input100" ng-repeat="product in myproducts">
                     <span>{{product.title}} for {{product.price}}</span>
                     <input class="input100 date-picker" type="checkbox" name="name[]" ng-checked="productArray(product._id)">
-                </div>
+                </div> -->
                 <div class="container-contact100-form-btn">
                     <button class="contact100-form-btn" type="submit">
                         <span>AUCTION <i class="fa fa-long-arrow-right m-l-7" aria-hidden="true"></i></span>
