--- a/public/views/frontends/products.html
+++ b/public/views/frontends/products.html
@@ -4,7 +4,8 @@
         <div class=" row banner_bottom_agile_info_inner_w3ls">
             <div class="col-md-4 wthree_banner_bottom_grid_three_left1 grid" ng-repeat="product in products">
                 <figure class="effect-roxy">
-                    <img src="{{product.images[0].path}}" alt=" " class="img-responsive" />
+                    <!-- <img src="{{product.images[0].path}}" alt=" " class="img-responsive" /> -->
+                    <img src="{{ product.images[0].image || product.images[0].path}}" alt=" " class="img-responsive" />
                     <figcaption>
                         <h3><span>{{product.title.substr(0,1)}}</span>{{product.title.substr(1)}}</h3>
                         <h5><span>For {{product.price | currency: $ }}</span></h5>
